# mycobot-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  crates.js  search-index.js  settings.html  source-files.js
examples/: send_angles.rs  send_coords.rs
implementors/core/clone/: trait.Clone.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/mycobot/: trait.Connection.js
implementors/num_traits/cast/: trait.FromPrimitive.js
mycobot/: all.html  enum.Angle.html  enum.Coord.html  enum.Direction.html  enum.GripperState.html  enum.Mode.html  enum.PinMode.html  index.html  sidebar-items.js  struct.Command.html  struct.MyCobotOperator.html  struct.Serial.html  trait.Connection.html  type.MyCobotSerialOperator.html  type.Result.html
mycobot/common/: enum.Angle.html  enum.Coord.html  enum.Direction.html  enum.GripperState.html  enum.Mode.html  enum.PinMode.html  struct.Command.html
mycobot/io/: struct.Serial.html  trait.Connection.html
mycobot/operator/: struct.MyCobotOperator.html  type.MyCobotSerialOperator.html
src/: common.rs  io.rs  lib.rs  operator.rs  utils.rs
src/mycobot/: common.rs.html  io.rs.html  lib.rs.html  operator.rs.html  utils.rs.html
