[package]
name = "mycobot"
version = "0.1.0"
authors = ["nekanat <nekanat.stock@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Mycobot API in Rust."
readme = "README.md"
homepage = "https://github.com/neka-nat/mycobot-rs"
repository = "https://github.com/neka-nat/mycobot-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.0.1"
byteorder = "1.4.3"
