[package]
name = "mycobot"
version = "0.3.0"
authors = ["nekanat <nekanat.stock@gmail.com>"]
edition = "2018"
license = "MIT"
description = "MyCobot API in Rust."
readme = "README.md"
documentation = "http://neka-nat.github.io/mycobot-rs/mycobot/"
homepage = "https://github.com/neka-nat/mycobot-rs"
repository = "https://github.com/neka-nat/mycobot-rs"
keywords = ["robotics", "mycobot"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.0.1"
byteorder = "1.4.3"
num-traits = "0.2"
